--- a/views/ndvi_ui.ui
+++ b/views/ndvi_ui.ui
@@ -81,6 +81,19 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="selectBtn">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Seleccionar</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
@@ -115,8 +128,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>1053</width>
-              <height>626</height>
+              <width>1057</width>
+              <height>682</height>
              </rect>
             </property>
             <property name="layoutDirection">
@@ -156,17 +169,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1101</width>
-     <height>26</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
