Cambiando nombre de la librería

--- a/views/ndvi_ui.ui
+++ b/views/ndvi_ui.ui
@@ -172,7 +172,7 @@
   <customwidget>
    <class>ImageViewer</class>
    <extends>QGraphicsView</extends>
-   <header>.classes.custom_classes</header>
+   <header>ndvi_lib.ndvi_class</header>
   </customwidget>
  </customwidgets>
  <resources/>
