Zoom de ambas imágenes y complater dibujo

--- a/views/ndvi_ui.ui
+++ b/views/ndvi_ui.ui
@@ -209,6 +209,12 @@
             </color>
            </brush>
           </property>
+          <property name="transformationAnchor">
+           <enum>QGraphicsView::AnchorUnderMouse</enum>
+          </property>
+          <property name="resizeAnchor">
+           <enum>QGraphicsView::AnchorUnderMouse</enum>
+          </property>
          </widget>
         </item>
         <item>
