--- a/views/ndvi_ui.ui
+++ b/views/ndvi_ui.ui
@@ -150,6 +150,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="selectBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
               <horstretch>0</horstretch>
@@ -163,6 +166,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="opencvBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
               <horstretch>0</horstretch>
