--- a/views/popup_ui.ui
+++ b/views/popup_ui.ui
@@ -59,7 +59,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QDialogButtonBox" name="btnOptions">
+    <widget class="QDialogButtonBox" name="dialogButtonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -73,7 +73,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>btnOptions</sender>
+   <sender>dialogButtonBox</sender>
    <signal>accepted()</signal>
    <receiver>Dialog</receiver>
    <slot>accept()</slot>
@@ -89,7 +89,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>btnOptions</sender>
+   <sender>dialogButtonBox</sender>
    <signal>rejected()</signal>
    <receiver>Dialog</receiver>
    <slot>reject()</slot>
