--- a/views/ndvi_ui.ui
+++ b/views/ndvi_ui.ui
@@ -220,6 +220,64 @@
     </item>
    </layout>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>947</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuArchivo">
+    <property name="title">
+     <string>Archivo</string>
+    </property>
+    <addaction name="actionAbrir_imagen_RGB"/>
+    <addaction name="actionAbrir_imagen_NDVI"/>
+    <addaction name="actionGuardar"/>
+    <addaction name="actionGuardar_como"/>
+    <addaction name="actionSalir"/>
+   </widget>
+   <widget class="QMenu" name="menuEditar">
+    <property name="title">
+     <string>Editar</string>
+    </property>
+    <addaction name="actionSeleccionar"/>
+   </widget>
+   <addaction name="menuArchivo"/>
+   <addaction name="menuEditar"/>
+  </widget>
+  <action name="actionAbrir_imagen_RGB">
+   <property name="text">
+    <string>Abrir imagen RGB</string>
+   </property>
+  </action>
+  <action name="actionAbrir_imagen_NDVI">
+   <property name="text">
+    <string>Abrir imagen NDVI</string>
+   </property>
+  </action>
+  <action name="actionGuardar">
+   <property name="text">
+    <string>Guardar</string>
+   </property>
+  </action>
+  <action name="actionGuardar_como">
+   <property name="text">
+    <string>Guardar como...</string>
+   </property>
+  </action>
+  <action name="actionSalir">
+   <property name="text">
+    <string>Salir</string>
+   </property>
+  </action>
+  <action name="actionSeleccionar">
+   <property name="text">
+    <string>Seleccionar</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
