--- a/views/rbg2chla.ui
+++ b/views/rbg2chla.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Obtener NDVI</string>
+   <string>Obtener Clorofila</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -20,7 +20,7 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="lblRGB">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -33,14 +33,14 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_2">
+         <widget class="QLabel" name="lblRGBValue">
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="lblCHLA">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -48,12 +48,12 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Valor NDVI del pixel:</string>
+           <string>Valor de clorofilal:</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_4">
+         <widget class="QLabel" name="lblCHLAValue">
           <property name="text">
            <string/>
           </property>
@@ -62,7 +62,7 @@
        </layout>
       </item>
       <item>
-       <widget class="RGBViewer" name="rgbview"/>
+       <widget class="RGB2CHLA" name="rgbview"/>
       </item>
      </layout>
     </item>
@@ -100,7 +100,7 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>RGBViewer</class>
+   <class>RGB2CHLA</class>
    <extends>QGraphicsView</extends>
    <header>ndvi_lib.ndvi_class</header>
   </customwidget>
