--- a/views/rbg2chla.ui
+++ b/views/rbg2chla.ui
@@ -28,7 +28,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Valor RGB del pixel:</string>
+           <string>Valor NDVI del pixel:</string>
           </property>
          </widget>
         </item>
@@ -74,7 +74,7 @@
      <x>0</x>
      <y>0</y>
      <width>779</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuArchivo">
